--- a/package.json
+++ b/package.json
@@ -23,10 +23,35 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "gulp-format-md": "^0.1.9",
     "mocha": "^2.5.3"
   },
   "keywords": [
     "expand",
     "reflinks"
-  ]
+  ],
+  "verb": {
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
+    "related": {
+      "list": [
+        "reflinks",
+        "gulp-reflinks",
+        "gulp-format-md"
+      ]
+    },
+    "lint": {
+      "reflinks": true
+    },
+    "reflinks": [
+      "verb",
+      "verb-generate-readme"
+    ]
+  }
 }
