--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "LICENSE",
-    "README.md"
+    "lib"
   ],
   "main": "index.js",
   "engines": {
@@ -21,9 +20,15 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {},
+  "dependencies": {
+    "define-property": "^0.2.5",
+    "extend-shallow": "^2.0.1",
+    "regex-not": "^1.0.0",
+    "snapdragon": "^0.8.1",
+    "to-regex": "^3.0.1"
+  },
   "devDependencies": {
-    "gulp-format-md": "^0.1.9",
+    "gulp-format-md": "^0.1.11",
     "mocha": "^2.5.3"
   },
   "keywords": [
@@ -41,9 +46,9 @@
     ],
     "related": {
       "list": [
-        "reflinks",
+        "gulp-format-md",
         "gulp-reflinks",
-        "gulp-format-md"
+        "reflinks"
       ]
     },
     "lint": {
